# ai-document-hub

./: .env.example  .gitignore  CLAUDE.md  CV_TranPhanAnh_AI_Engineer.md  Interview_Guide_AI_Engineer.md  README.md  README_VI.md  docker-compose.prod.yml  docker-compose.yml  research-prompt.md
backend/: .env.example  Dockerfile  go.mod  go.sum  pyproject.toml  test.db  test.db-journal
backend/app/: config.py  database.py  main.py  worker.py
backend/app/models/: db_models.py  prompts.py  schemas.py
backend/app/preprocessing/: image_processor.py  text_processor.py
backend/app/routers/: documents.py  eval.py  extract.py  ocr.py  query.py
backend/app/services/: __init__.py  evaluation_service.py  extraction_service.py  llm_client.py  ocr_service.py  rag_service.py
backend/cmd/server/: main.go
backend/docker/: Dockerfile
backend/evaluation/datasets/: invoice_test_100.json  rag_test_200.json
backend/internal/config/: config.go  config_test.go
backend/internal/handler/: auth.go  auth_test.go  document.go  document_test.go  entry.go  entry_test.go  (+9 more)
backend/migrations/: 00001_initial_schema.down.sql  00001_initial_schema.up.sql  00002_org_integrations.down.sql  00002_org_integrations.up.sql  00003_fix_entry_status_constraint.down.sql  00003_fix_entry_status_constraint.up.sql  00004_entries_updated_at.down.sql  00004_entries_updated_at.up.sql  00005_entries_reject_reason.down.sql  00005_entries_reject_reason.up.sql  init.sql
backend/tests/: conftest.py  test_documents.py  test_eval.py  test_extraction.py  test_ocr.py  test_query.py  test_rag_pgvector.py
(+105 files in other folders)
